[package]
name = "opcode-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bincode = "1.3"
cbor = "0.4"
ctrlc = { version = "3.4", features = ["termination"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
futures = "0.3"
hex = "0.4"
url = "2.4"
sled = "0.34"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev.package.sqlx-macros]
opt-level = 3